--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="../vInputSwitch.jquery.js"></script>
     <script type="text/javascript">
       jQuery(document).ready(function($) {
-        $('#input').vInputSwitch();
+        $('input[type=text]').vInputSwitch();
       });
     </script>
   </head>
