--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <form method="get" action="#">
-      <input id="input" type="text" value="Demo..." />
+      <input type="text" placeholder="Demo 1" value="" />
+	  <input type="text" placeholder="test" value="" />
     </form>
   </body>
 </html>
