Renamed to vPlaceholder. Update your sources!

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>vInputSwitch Demo</title>
+    <title>vPlaceholder Demo</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../vInputSwitch.jquery.js"></script>
+    <script type="text/javascript" src="../vPlaceholder.jquery.js"></script>
     <script type="text/javascript">
       jQuery(document).ready(function($) {
-        $('input[type=text], textarea').vInputSwitch();
+        $('input[type=text], textarea').vPlaceholder();
       });
     </script>
   </head>
