Fixed bug with empty form submission

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
       <input type="text" placeholder="Test 1..." value="" />
 	  <input type="text" placeholder="Test 2..." value="" />
 	  <textarea placeholder="Test 3..."></textarea>
+	  <input type="submit" />
     </form>
   </body>
 </html>
